--- a/Hobee/pom.xml
+++ b/Hobee/pom.xml
@@ -193,6 +193,12 @@
 			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
 			<version>1.16</version>
 		</dependency>
+		<!-- JSON 직렬화를 위한 Jackson 라이브러리 -->
+			<dependency>
+   			 <groupId>com.fasterxml.jackson.core</groupId>
+    			<artifactId>jackson-databind</artifactId>
+   				<version>2.15.2</version>
+			</dependency>
 
 	</dependencies>
 	<build>
