--- a/Hobee/pom.xml
+++ b/Hobee/pom.xml
@@ -130,7 +130,7 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -178,6 +178,22 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.38</version>
 		</dependency>
+		
+		<!-- ✅ Spring Mail -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<!-- ✅ Spring Mail (Java 11 호환) -->
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-context-support</artifactId>
+   		 	<version>${org.springframework-version}</version> <!-- 5.0.7.RELEASE -->
+		</dependency>
+
+		<dependency>
+    		<groupId>com.sun.mail</groupId>
+    		<artifactId>javax.mail</artifactId>
+    		<version>1.6.2</version>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
 		<dependency>
@@ -200,11 +216,7 @@
     			<artifactId>jackson-databind</artifactId>
    				<version>2.15.2</version>
 			</dependency>
-
 		
-		
-
-
 	</dependencies>
 	<build>
 		<plugins>
