--- a/Hobee/pom.xml
+++ b/Hobee/pom.xml
@@ -40,6 +40,14 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>
+		<!-- 관점 지향 프로그래밍 -->
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<dependency>
+    		<groupId>org.aspectj</groupId>
+    		<artifactId>aspectjweaver</artifactId>
+    		<version>${org.aspectj-version}</version>
+    		<scope>runtime</scope>
+		</dependency>
 
 		<!-- 파일업로드 -->
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
@@ -216,7 +224,17 @@
     			<artifactId>jackson-databind</artifactId>
    				<version>2.15.2</version>
 			</dependency>
-		
+			
+		<!-- 트랙잭션 처리를 위한 라이브러리 -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-tx</artifactId>
+			    <version>${org.springframework-version}</version>
+			</dependency>
+			
+			
+			
 	</dependencies>
 	<build>
 		<plugins>
